# texforge-backend

./: .env.example  .gitignore  Dockerfile  README.md  TRD.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: compile.py  compile_cache.py  compile_coordinator.py  compile_orchestrator.py  config.py  engine_strategy.py  main.py  models.py  security.py  storage_paths.py  supabase_client.py  timing.py  workdir_cache.py
scripts/: benchmark_compile.py
supabase/: schema.sql  storage.sql
tests/: test_api.py  test_cold_start.py  test_compile.py  test_compile_cache.py  test_compile_coordinator.py  test_compile_orchestrator.py  test_engine_strategy.py  test_security.py  test_supabase_async.py  test_timing.py  test_workdir_cache.py
